<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="61dp"
        android:layout_height="66dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/icon" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombre"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_cantidad"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEliminar"
        android:text="@string/btn_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
